feat: gamificação, matrix, lista de tarefas